


syntax = "proto3";

option go_package = "pb/raft";

package Raft;

service Raft {
  rpc AppendEntry(AppendEntryRequest) returns (Empty);
  rpc ReplyAppendEntry(AppendEntryReply) returns (Empty);
  rpc Election(ElectionRequest) returns (Empty);
  rpc ReplyElection(ElectionReply) returns (Empty);
}

message Empty {}

message Entry{
    string payload = 1;
    int64 index = 2; 
}

message AppendEntryRequest {
  repeated Entry entries = 1;
  int32 nodeId = 2;
  int64 term = 3;
  int64 commitIndex = 4;
}

message AppendEntryReply {
    int64 currentIndex = 1;
    int32 nodeId = 2;
}

message ElectionRequest{
    int64 term = 1;
    int32 nodeId = 2;
}

message ElectionReply {
    bool vote = 1;
    int64 term = 2;
}